# bash-corpora

./: .gitignore  Makefile.am  README.md  clean-html.bash  common-sgml-entities.sed  configure.ac  corpus.bash  fetch-europarl.bash  fetch-gutenberg.bash  fetch-jrc-acquis.bash  fetch-opensubtitles.bash  fetch-tatoeba.bash  fetch-wikimedia.bash  html-entity-names.sed  install-scripts.bash  random-lines.bash  select-bests.bash  tabulate-comm.bash  tokenise.bash  unescape-xmlish-entities.py  unpack-europarl.bash  unpack-gutenbergs.bash  unpack-jrc-acquis.bash  unpack-opensubtitles.bash  unpack-tatoeba.bash  unpack-wikimedia.bash  unpack-wikimedia.bash.in  xml-entity-codes.sed
