## Process this file with automake to create Makefile.in

bin_SCRIPTS=clean-html.bash \
			fetch-europarl.bash \
			fetch-gutenberg.bash \
			fetch-jrc-acquis.bash \
			fetch-tatoeba.bash \
			fetch-wikimedia.bash \
			unpack-europarl.bash \
			unpack-gutenbergs.bash \
			unpack-jrc-acquis.bash \
			unpack-tatoeba.bash \
			unpack-wikimedia.bash

# vim: set foldmethod=marker:
